--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_STORAGE_BUCKET = "fortigate-ca6e8.appspot.com"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "1094869299504"
 REACT_APP_FIREBASE_APP_ID = "1:1094869299504:web:c1bb524ce359dfdc7558f5"
 REACT_APP_FIREBASE_MESSAGING_ID= "G-YNS1MBPSDR"
+HTTPS=true
